Fix wrapping

--- a/css/site.css
+++ b/css/site.css
@@ -33,7 +33,7 @@ p {
 
 .follow {
   font-weight: 600;
-  font-size: 36px;
+  font-size: 2rem;
   line-height: 80px;
   vertical-align: middle;
   margin-left: 20px;
